--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,9 @@
-group=net.staticstudios
+group=net.staticstudios.staticpaper
 version=1.21.8-R0.1-SNAPSHOT
 mcVersion=1.21.8
 aspRef=3ec7916222cf4110e0aa128b0a7d4ee44f72ed69
 apiVersion=4.1.0
+publishDevBundle=true
 
 org.gradle.caching=true
 org.gradle.parallel=true
